--- a/conda_conflicts.ipynb
+++ b/conda_conflicts.ipynb
@@ -141,9 +141,7 @@
    "source": [
     "with open(\"conflicts.txt\",\"r\") as f:\n",
     "    conflictstr = f.read()\n",
-    "conflicts = parse_conflicts(conflictstr)\n",
-    "r=result(conflicts)\n",
-    "r.manual_solver()"
+    "conflicts = parse_conflicts(conflictstr)"
    ]
   },
   {
@@ -152,6 +150,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "r=result(conflicts)\n",
+    "r.manual_solver()\n",
     "r.result\n",
     "with open(\"result.json\",\"wb\") as f:\n",
     "    json.dump(r.result,f)"
