--- a/conda_conflicts.ipynb
+++ b/conda_conflicts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "realistic-incentive",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "painful-meditation",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "id": "dramatic-trunk",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
     "                    valid=False\n",
     "                    while valid is False:\n",
     "                        for constraint in self.conflicts[i].constraints:\n",
-    "                            print(constraint.dependancy)\n",
+    "                            print(constraint.dependency)\n",
     "                            print(constraint.versions)\n",
     "                        print(\"-\")\n",
     "                        print(\"merged: \")\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -162,6 +162,32 @@
       "2 - libzlib\n",
       "-----------\n",
       "\n",
+      "matplotlib\n",
+      "1.2.11|1.2.11|>=1.2.11,<1.3.0a0\n",
+      "pytrends\n",
+      ">=1.2.11,<1.3.0a0\n",
+      "dataclasses\n",
+      ">=1.2.11,<1.3.0a0\n",
+      "requests\n",
+      ">=1.2.11,<1.3.0a0\n",
+      "numpy\n",
+      ">=1.2.11,<1.3.0a0\n",
+      "pip\n",
+      ">=1.2.11,<1.3.0a0\n",
+      "mplfinance\n",
+      ">=1.2.11,<1.3.0a0\n",
+      "pandas\n",
+      ">=1.2.11,<1.3.0a0\n",
+      "ipython\n",
+      ">=1.2.11,<1.3.0a0\n",
+      "python-dateutil\n",
+      ">=1.2.11,<1.3.0a0\n",
+      "ipykernel\n",
+      ">=1.2.11,<1.3.0a0\n",
+      "python-telegram-bot\n",
+      ">=1.2.11,<1.3.0a0\n",
+      "-\n",
+      "merged: \n",
       "1.2.11|1.2.11|>=1.2.11,<1.3.0a0,>=1.2.11,<1.3.0a0,>=1.2.11,<1.3.0a0,>=1.2.11,<1.3.0a0,>=1.2.11,<1.3.0a0,>=1.2.11,<1.3.0a0,>=1.2.11,<1.3.0a0,>=1.2.11,<1.3.0a0,>=1.2.11,<1.3.0a0,>=1.2.11,<1.3.0a0,>=1.2.11,<1.3.0a0,>=1.2.11,<1.3.0a0\n",
       "\n",
       "Solution: 1.2.11\n",
@@ -171,88 +197,13 @@
       "3 - requests\n",
       "-----------\n",
       "\n",
-      ">=1.0.0|>=2.19.0|>=2.3.0,>=2.9.1\n",
-      "\n",
-      "Solution: 2.9.1\n",
-      "\n",
-      "\n",
-      "########\n",
-      "4 - pypy3.7\n",
-      "-----------\n",
-      "\n",
-      "7.3.*|7.3.3.*|7.3.4.*|7.3.5.*,7.3.*|7.3.3.*|7.3.4.*|7.3.5.*,7.3.*|7.3.3.*|7.3.4.*|7.3.5.*,7.3.*|7.3.3.*|7.3.4.*|7.3.5.*,7.3.3.*|7.3.4.*|7.3.5.*|>=7.3.3|>=7.3.5,>=7.3.3|>=7.3.4|>=7.3.5,>=7.3.3|>=7.3.4|>=7.3.5,>=7.3.3|>=7.3.4,7.3.3.*|7.3.4.*|7.3.5.*,7.3.3.*|7.3.4.*|7.3.5.*|>=7.3.3|>=7.3.4|>=7.3.5,7.3.*|7.3.3.*|7.3.4.*|7.3.5.*|>=7.3.5,>=7.3.3|>=7.3.5|>=7.3.4,>=7.3.3|>=7.3.4|>=7.3.5,7.3.3.*|7.3.4.*|7.3.5.*|>=7.3.3|>=7.3.5|>=7.3.4,7.3.3.*|7.3.4.*|7.3.5.*|>=7.3.3|>=7.3.5|>=7.3.4,7.3.3.*|7.3.4.*|7.3.5.*,7.3.3.*|7.3.4.*|7.3.5.*|>=7.3.3|>=7.3.4|>=7.3.5,>=7.3.3|>=7.3.4|>=7.3.5\n",
-      "\n",
-      "Solution: 7.3.5\n",
-      "\n",
-      "\n",
-      "########\n",
-      "5 - backports\n",
-      "-----------\n",
-      "\n",
-      "Empty\n",
-      "########\n",
-      "6 - setuptools\n",
-      "-----------\n",
-      "\n",
-      ">18.0,>=18.5,>=18.5\n",
-      "\n",
-      "Solution: 18.5\n",
-      "\n",
-      "\n",
-      "########\n",
-      "7 - pip\n",
-      "-----------\n",
-      "\n",
-      ">=7.1.0\n",
-      "\n",
-      "Solution: 7.1.0\n",
-      "\n",
-      "\n",
-      "########\n",
-      "8 - tzdata\n",
-      "-----------\n",
-      "\n",
-      "Empty\n",
-      "########\n",
-      "9 - python-dateutil\n",
-      "-----------\n",
-      "\n",
-      ">=2.1,>=2.1,>=2.4.2,>=2.6.1|>=2.7.3,>=2.5.*|>=2.6.1|>=2.7.3,>=2.5.*|>=2.6.1|>=2.7.3,>=2.1|>=2.7.3|>=2.6.1|>=2.5.*\n",
-      "\n",
-      "Solution: 2.7.3\n",
-      "\n",
-      "\n",
-      "########\n",
-      "10 - wheel\n",
-      "-----------\n",
-      "\n",
-      "Empty\n",
-      "########\n",
-      "11 - libcxxabi\n",
-      "-----------\n",
-      "\n",
-      "4.0.1|8.0.1|8.0.0|8.0.0|8.0.0|8.0.0,4.0.1|8.0.1|8.0.0|8.0.0|8.0.0|8.0.0,4.0.1|8.0.1|8.0.0|8.0.0|8.0.0|8.0.0,4.0.1|8.0.1|8.0.0|8.0.0|8.0.0|8.0.0\n"
-     ]
-    },
-    {
-     "ename": "InvalidVersionSpec",
-     "evalue": "Invalid version '': empty version string",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m/opt/miniconda3/lib/python3.9/site-packages/conda/models/version.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(cls, arg)\u001b[0m\n\u001b[1;32m     37\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mcls\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_cache_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0marg\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: ''",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mInvalidVersionSpec\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/qd/pm08qr3s0dx5q76fd9pxjgyh0000gn/T/ipykernel_4021/1242889824.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconflicts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmanual_solver\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"result.json\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"wb\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/var/folders/qd/pm08qr3s0dx5q76fd9pxjgyh0000gn/T/ipykernel_4021/830399230.py\u001b[0m in \u001b[0;36mmanual_solver\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     26\u001b[0m                         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconflicts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmerge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m                         \u001b[0mvalue\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Enter value for {self.conflicts[i].name}: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m                         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconflicts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmerge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m                             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m                             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Solution: {value}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/miniconda3/lib/python3.9/site-packages/conda/models/version.py\u001b[0m in \u001b[0;36many_match\u001b[0;34m(self, spec_str)\u001b[0m\n\u001b[1;32m    478\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    479\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0many_match\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mspec_str\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 480\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mspec_str\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ms\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtup\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    481\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    482\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mall_match\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mspec_str\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/miniconda3/lib/python3.9/site-packages/conda/models/version.py\u001b[0m in \u001b[0;36m<genexpr>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    478\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    479\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0many_match\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mspec_str\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 480\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mspec_str\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ms\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtup\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    481\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    482\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mall_match\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mspec_str\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/miniconda3/lib/python3.9/site-packages/conda/models/version.py\u001b[0m in \u001b[0;36moperator_match\u001b[0;34m(self, spec_str)\u001b[0m\n\u001b[1;32m    475\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    476\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0moperator_match\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mspec_str\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 477\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moperator_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mVersionOrder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext_type\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mspec_str\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatcher_vo\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    478\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    479\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0many_match\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mspec_str\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/miniconda3/lib/python3.9/site-packages/conda/models/version.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(cls, arg)\u001b[0m\n\u001b[1;32m     38\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mcls\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_cache_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0marg\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 40\u001b[0;31m                 \u001b[0mval\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcls\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_cache_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0marg\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSingleStrArgCachingType\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcls\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__call__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     41\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mval\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/miniconda3/lib/python3.9/site-packages/conda/models/version.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, vstr)\u001b[0m\n\u001b[1;32m    162\u001b[0m         \u001b[0;31m# basic validity checks\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    163\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mversion\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 164\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mInvalidVersionSpec\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"empty version string\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    165\u001b[0m         \u001b[0minvalid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mversion_check_re\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mversion\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    166\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0minvalid\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m'-'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mversion\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m'_'\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mversion\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mInvalidVersionSpec\u001b[0m: Invalid version '': empty version string"
+      "zipline\n",
+      ">=1.0.0|>=2.19.0|>=2.3.0\n",
+      "zipline\n",
+      ">=2.9.1\n",
+      "-\n",
+      "merged: \n",
+      ">=1.0.0|>=2.19.0|>=2.3.0,>=2.9.1\n"
      ]
     }
    ],
@@ -263,6 +214,13 @@
     "with open(\"result.json\",\"wb\") as f:\n",
     "    json.dump(r.result,f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
