--- a/conda_conflicts.ipynb
+++ b/conda_conflicts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "realistic-incentive",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "painful-meditation",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "dramatic-trunk",
    "metadata": {},
    "outputs": [],
@@ -117,8 +117,8 @@
     "                            print(constraint.dependency)\n",
     "                            print(constraint.versions)\n",
     "                        print(\"-\")\n",
-    "                        print(\"merged: \")\n",
-    "                        print(self.conflicts[i].merge())\n",
+    "                        # print(\"merged: \")\n",
+    "                        # print(self.conflicts[i].merge())\n",
     "                        value=input(f\"Enter value for {self.conflicts[i].name}: \")\n",
     "                        if self.conflicts[i].merge().match(value):\n",
     "                            print()\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,62 +151,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "########\n",
-      "2 - libzlib\n",
-      "-----------\n",
-      "\n",
-      "matplotlib\n",
-      "1.2.11|1.2.11|>=1.2.11,<1.3.0a0\n",
-      "pytrends\n",
-      ">=1.2.11,<1.3.0a0\n",
-      "dataclasses\n",
-      ">=1.2.11,<1.3.0a0\n",
-      "requests\n",
-      ">=1.2.11,<1.3.0a0\n",
-      "numpy\n",
-      ">=1.2.11,<1.3.0a0\n",
-      "pip\n",
-      ">=1.2.11,<1.3.0a0\n",
-      "mplfinance\n",
-      ">=1.2.11,<1.3.0a0\n",
-      "pandas\n",
-      ">=1.2.11,<1.3.0a0\n",
-      "ipython\n",
-      ">=1.2.11,<1.3.0a0\n",
-      "python-dateutil\n",
-      ">=1.2.11,<1.3.0a0\n",
-      "ipykernel\n",
-      ">=1.2.11,<1.3.0a0\n",
-      "python-telegram-bot\n",
-      ">=1.2.11,<1.3.0a0\n",
-      "-\n",
-      "merged: \n",
-      "1.2.11|1.2.11|>=1.2.11,<1.3.0a0,>=1.2.11,<1.3.0a0,>=1.2.11,<1.3.0a0,>=1.2.11,<1.3.0a0,>=1.2.11,<1.3.0a0,>=1.2.11,<1.3.0a0,>=1.2.11,<1.3.0a0,>=1.2.11,<1.3.0a0,>=1.2.11,<1.3.0a0,>=1.2.11,<1.3.0a0,>=1.2.11,<1.3.0a0,>=1.2.11,<1.3.0a0\n",
-      "\n",
-      "Solution: 1.2.11\n",
-      "\n",
-      "\n",
-      "########\n",
-      "3 - requests\n",
-      "-----------\n",
-      "\n",
-      "zipline\n",
-      ">=1.0.0|>=2.19.0|>=2.3.0\n",
-      "zipline\n",
-      ">=2.9.1\n",
-      "-\n",
-      "merged: \n",
-      ">=1.0.0|>=2.19.0|>=2.3.0,>=2.9.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "r=result(conflicts)\n",
     "r.manual_solver()\n",
